--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 <section class="uk-section uk-background-muted">
 	<div class="uk-container uk-text-center">
 
-		<h1 class="uk-heading-primary uk-margin-medium-bottom" data-uk-scrollspy="cls: uk-animation-slide-bottom-medium;">Pre-Durg 药物重定位</h1>
+		<h1 class="uk-heading-primary uk-margin-medium-bottom" data-uk-scrollspy="cls: uk-animation-slide-bottom-medium;">Pre-Drug 药物重定位</h1>
 
 		<div>
 			<img src="/img/2.gif">
@@ -34,13 +34,13 @@
 				</a>
 			</div>
 			<div>
-				<a href="category.html" class="uk-card card-box uk-card-body uk-border-rounded">
+				<a href="search-cpi" class="uk-card card-box uk-card-body uk-border-rounded">
 					<span data-uk-icon="icon: code; ratio: 3"></span>
-					<p class="uk-margin-medium-top">药物/疾病关联性分析</p>
+					<p class="uk-margin-medium-top">化合物-蛋白质相互作用</p>
 				</a>
 			</div>
 			<div>
-				<a href="category.html" class="uk-card card-box uk-card-body uk-border-rounded">
+				<a href="search" class="uk-card card-box uk-card-body uk-border-rounded">
 					<span data-uk-icon="icon: search; ratio: 3"></span>
 					<p class="uk-margin-medium-top">数据检索</p>
 				</a>
